use github.actor as username in workflows

--- a/.github/workflows/rdmx-docker-image.yml
+++ b/.github/workflows/rdmx-docker-image.yml
@@ -16,7 +16,7 @@ jobs:
       name: Docker login GHCR
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - uses: docker/build-push-action@v5
       name: Build the docker image
