--- a/.github/workflows/rdmx-docker-image.yml
+++ b/.github/workflows/rdmx-docker-image.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   buildx:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      package: write
     steps:
     - uses: actions/checkout@v4
       name: "Checkout"
