--- a/.github/workflows/rdmx-docker-image.yml
+++ b/.github/workflows/rdmx-docker-image.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      package: write
+      packages: write
     steps:
     - uses: actions/checkout@v4
       name: "Checkout"
