--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,9 @@ clap = { version = "4.5", features = ["derive"] }
 clap_derive = "4.5"
 libc = "0.2.174"
 nix = { version = "0.30.1", features = ["signal", "event", "time"] }
+num = "0.4.3"
+num-derive = "0.4.2"
+num-traits = "0.2.19"
 socket2 = "0.5.10"
+log = "0.4.27"
 
